arquivos/registros/.bkp/20240528123021_Sismo_Pipeline.log

========================================================================
                       Iniciando do Pipeline                         
========================================================================

 ---------------- INICIANDO DATA_ANALYSIS/POSPROCESS.PY ---------------------------- 
  File "/home/ipt/projetos/ClassificadorSismologico/fonte/analise_dados/pos_processa.py", line 1037
    a - 0.15, rc + 0.75, f'S/N: {descrito['SNR_P']['mean']:.0f}±{descrito["SNR_P"]["std"]:.0f} (Q2: {descrito['SNR_P']['50%']:.0f})',
                                           ^^^^^
SyntaxError: f-string: unmatched '['

 -------------- Processo de criação de mapas iniciado ------------------

 ----------------- Iniciando o pdflatex .tex ---------------------------- 
/home/ipt/.pyenv/versions/sismologia/bin/python: can't open file '/home/ipt/projetos/ClassificadorSismologico/fonte/relatorio-sismologia/pyscripts/figures.py': [Errno 2] No such file or directory
/home/ipt/.pyenv/versions/sismologia/bin/python: can't open file '/home/ipt/projetos/ClassificadorSismologico/fonte/relatorio-sismologia/pyscripts/mapa.py': [Errno 2] No such file or directory
/home/ipt/.local/bin/fluxo_sismo.sh: linha 135: pushd: fonte/relatorio-sismologia: Arquivo ou diretório inexistente
This is pdfTeX, Version 3.141592653-2.6-1.40.24 (TeX Live 2022/Debian) (preloaded format=pdflatex)
 restricted \write18 enabled.
entering extended mode
! I can't find file `relatorio_preditivo.tex'.
<*> relatorio_preditivo.tex
                           
(Press Enter to retry, or Control-D to exit)
Please type another input file name: 
! Emergency stop.
<*> 
    
!  ==> Fatal error occurred, no output PDF file produced!
Transcript written on /home/ipt/projetos/ClassificadorSismologico/arquivos/resu
ltados/relatorios//texput.log.
~
========================================================================
                        Fim do Pipeline                                 
========================================================================

/home/ipt/.local/bin/fluxo_sismo.sh: linha 144: popd: pilha de diretórios está vazia
